--- a/reactjs/package.json
+++ b/reactjs/package.json
@@ -12,6 +12,7 @@
     "formik": "^2.4.6",
     "graphql": "^16.8.1",
     "react": "^18.3.1",
+    "react-chat-elements": "^12.0.15",
     "react-cookie": "^7.1.4",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
