--- a/reactjs/package.json
+++ b/reactjs/package.json
@@ -11,9 +11,12 @@
     "bootstrap-icons": "^1.11.3",
     "formik": "^2.4.6",
     "graphql": "^16.8.1",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-chat-elements": "^12.0.15",
     "react-cookie": "^7.1.4",
+    "react-datetime": "^3.2.0",
+    "react-datetime-picker": "^6.0.1",
     "react-dom": "^18.3.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.23.1",
