--- a/reactjs/package.json
+++ b/reactjs/package.json
@@ -4,17 +4,24 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.10.4",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^5.16.5",
+    "@mui/x-date-pickers": "^7.11.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apollo-upload-client": "^18.0.1",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "date-fns": "^3.6.0",
     "formik": "^2.4.6",
     "graphql": "^16.8.1",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-chat-elements": "^12.0.15",
     "react-cookie": "^7.1.4",
+    "react-datepicker": "^7.3.0",
     "react-datetime": "^3.2.0",
     "react-datetime-picker": "^6.0.1",
     "react-dom": "^18.3.1",
