--- a/reactjs/package.json
+++ b/reactjs/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "react-simple-star-rating": "^5.1.7",
     "sass": "^1.77.4",
     "urql": "^4.1.0",
     "web-vitals": "^2.1.4",
