--- a/reactjs/package.json
+++ b/reactjs/package.json
@@ -6,11 +6,13 @@
     "@apollo/client": "^3.10.4",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@habx/apollo-multi-endpoint-link": "^2.9.0",
     "@mui/material": "^5.16.5",
     "@mui/x-date-pickers": "^7.11.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@titelmedia/react-apollo-multiple-clients": "^4.0.5",
     "apollo-upload-client": "^18.0.1",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
