--- a/reactjs/package.json
+++ b/reactjs/package.json
@@ -13,6 +13,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@titelmedia/react-apollo-multiple-clients": "^4.0.5",
+    "ajv": "^6.12.6",
+    "ajv-keywords": "^3.5.2",
     "apollo-upload-client": "^18.0.1",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
