--- a/reactjs/package.json
+++ b/reactjs/package.json
@@ -9,6 +9,8 @@
     "@habx/apollo-multi-endpoint-link": "^2.9.0",
     "@mui/material": "^5.16.5",
     "@mui/x-date-pickers": "^7.11.1",
+    "@stripe/react-stripe-js": "^3.0.0",
+    "@stripe/stripe-js": "^5.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
