--- a/reactjs/package.json
+++ b/reactjs/package.json
@@ -1,55 +1,22 @@
 {
   "name": "reactjs",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@apollo/client": "^3.10.4",
-    "@emotion/react": "^11.13.0",
-    "@emotion/styled": "^11.13.0",
-    "@habx/apollo-multi-endpoint-link": "^2.9.0",
-    "@mui/material": "^5.16.5",
-    "@mui/x-date-pickers": "^7.11.1",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@titelmedia/react-apollo-multiple-clients": "^4.0.5",
-    "ajv": "^6.12.6",
-    "ajv-keywords": "^3.5.2",
-    "apollo-upload-client": "^18.0.1",
-    "bootstrap": "^5.3.3",
-    "bootstrap-icons": "^1.11.3",
-    "date-fns": "^3.6.0",
-    "formik": "^2.4.6",
-    "graphql": "^16.8.1",
-    "moment": "^2.30.1",
-    "react": "^18.3.1",
-    "react-chat-elements": "^12.0.15",
-    "react-cookie": "^7.1.4",
-    "react-datepicker": "^7.3.0",
-    "react-datetime": "^3.2.0",
-    "react-datetime-picker": "^6.0.1",
-    "react-dom": "^18.3.1",
-    "react-infinite-scroll-component": "^6.1.0",
-    "react-router-dom": "^6.23.1",
-    "react-scripts": "5.0.1",
-    "react-select": "^5.8.0",
-    "react-simple-star-rating": "^5.1.7",
-    "sass": "^1.77.4",
-    "urql": "^4.1.0",
-    "web-vitals": "^2.1.4",
-    "yup": "^1.4.0"
-  },
+  "version": "1.0.0",
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@apollo/client": "^3.12.7",
+    "@habx/apollo-multi-endpoint-link": "^2.9.0",
+    "apollo-upload-client": "^18.0.1",
+    "react-chat-elements": "^12.0.17",
+    "react-scripts": "^5.0.1"
   },
   "browserslist": {
     "production": [
@@ -62,8 +29,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/bootstrap": "^5.2.10"
   }
 }
