Dockerfiles update to include new module
Added common streaming module that allows
to change between different streaming
options so add it in the Dockerfiles
from my github

--- a/backend/microemail/Dockerfile
+++ b/backend/microemail/Dockerfile
@@ -8,6 +8,7 @@ RUN apt-get update && apt-get install -y \
     gcc \
     libffi-dev \
     librdkafka-dev \
+    git \
     && apt-get clean
     
 
@@ -15,6 +16,7 @@ RUN apt-get update && apt-get install -y \
 COPY requirements.txt .
 
 # Install dependencies
+RUN pip install git+https://github.com/artirix1927/Common-Streaming-Package.git#egg=common-streaming
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the rest of your application code
