--- a/reactjs/package.json
+++ b/reactjs/package.json
@@ -12,11 +12,31 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@apollo/client": "^3.12.7",
+    "@apollo/client": "^3.13.5",
     "@habx/apollo-multi-endpoint-link": "^2.9.0",
+    "@stripe/react-stripe-js": "^3.5.1",
+    "@stripe/stripe-js": "^6.1.0",
     "apollo-upload-client": "^18.0.1",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
+    "date-fns": "^4.1.0",
+    "formik": "^2.4.6",
+    "graphql": "^16.10.0",
+    "i": "^0.3.7",
+    "npm": "^11.2.0",
+    "react": "^18.3.1",
     "react-chat-elements": "^12.0.17",
-    "react-scripts": "^5.0.1"
+    "react-cookie": "^8.0.1",
+    "react-datepicker": "^8.2.1",
+    "react-dom": "^18.3.1",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-router-dom": "^7.4.1",
+    "react-scripts": "^5.0.1",
+    "react-select": "^5.10.1",
+    "react-simple-star-rating": "^5.1.7",
+    "sass": "^1.86.0",
+    "web-vitals": "^4.2.4",
+    "yup": "^1.6.1"
   },
   "browserslist": {
     "production": [
@@ -29,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "ajv": "^7.2.4"
   }
 }
