Changed the #egg name in for my module in docker

--- a/backend/shop/Dockerfile
+++ b/backend/shop/Dockerfile
@@ -14,7 +14,7 @@ RUN apt-get update && apt-get install -y \
 # Copy the requirements file and install dependencies
 
 COPY requirements.txt .
-RUN pip install git+https://github.com/artirix1927/Common-Streaming-Package.git#egg=common-streaming
+RUN pip install git+https://github.com/artirix1927/Common-Streaming-Package.git#egg=common_streaming
 
 RUN pip install --no-cache-dir -r requirements.txt
 
